# langflow

./: .gitignore  AGENTS.md  Makefile  qstart.sh  qstart_dev.sh
qplan/: build-from-beginning.html  build-hang-root-cause.html  codex-exec-output.html  codex-exec-sidebar.html  codex-real-time-stream.html  custom-component-codex-exec.html  hide-component-categories.html  hide-ui-elements.html  incremental-flow-run.html  paddle-ocr-vl-components.html  parallel-build-execution.html  paste-upload-invisible.html  run-mode-options.html  skip-built-vertices.html
scripts/: start_llama_worker.sh  start_ocr_worker.sh  stop_llama_worker.sh  stop_ocr_worker.sh
src/backend/base/langflow/api/: build.py
src/backend/base/langflow/services/job_queue/: service.py
src/bundles/llama/: llama_worker_server.py  pyproject.toml
src/bundles/llama/src/lfx_llama/: __init__.py  extension.json
src/bundles/llama/src/lfx_llama/components/: __init__.py
src/bundles/llama/src/lfx_llama/components/llama/: __init__.py  llama_vision.py
src/bundles/paddleocr/: ocr_worker_server.py  pyproject.toml
src/bundles/paddleocr/src/lfx_paddleocr/: __init__.py  extension.json
src/bundles/paddleocr/src/lfx_paddleocr/components/paddleocr/: __init__.py  ocr_paddle.py
src/bundles/paddleocr/tests/: test_ocr_paddle_component.py
src/bundles/vlimages/: pyproject.toml
src/bundles/vlimages/src/lfx_vlimages/: __init__.py  extension.json
src/bundles/vlimages/src/lfx_vlimages/components/vlimages/: __init__.py  vl_images.py
src/bundles/vlimages/tests/: test_vl_images_component.py
src/frontend/src/CustomNodes/GenericNode/: index.tsx
src/frontend/src/CustomNodes/GenericNode/components/NodeStatus/: index.tsx
src/frontend/src/CustomNodes/GenericNode/hooks/: use-get-build-status.ts
src/frontend/src/components/core/dropdownComponent/: index.tsx
src/frontend/src/components/core/parameterRenderComponent/: index.tsx
src/frontend/src/components/core/parameterRenderComponent/components/inputComponent/: index.tsx
src/frontend/src/components/core/parameterRenderComponent/components/inputFileComponent/: index.tsx
src/frontend/src/controllers/API/: api.tsx  sse-worker.ts
src/frontend/src/customization/components/: custom-input-file.tsx
src/frontend/src/locales/: en.json
src/frontend/src/modals/IOModal/components/chatView/chatInput/: chat-input.tsx
src/frontend/src/modals/fileManagerModal/components/dragFilesComponent/: index.tsx
src/frontend/src/modals/fileManagerModal/components/recentFilesComponent/: index.tsx
src/frontend/src/modals/runModeModal/: index.tsx
src/frontend/src/pages/FlowPage/: index.tsx
src/frontend/src/pages/FlowPage/components/flowBuildingComponent/: index.tsx
src/frontend/src/pages/FlowPage/components/flowSidebarComponent/: index.tsx
src/frontend/src/stores/: flowStore.ts
src/frontend/src/style/: index.css
src/frontend/src/types/zustand/flow/: index.ts
src/frontend/src/utils/: buildUtils.ts  styleUtils.ts
src/frontend/src/utils/__tests__/: findNearestBuiltUpstream.test.ts
src/frontend/tests/core/features/: run-mode-modal.spec.ts
src/lfx/src/lfx/components/: __init__.py
src/lfx/src/lfx/components/codex_exec/: __init__.py  codex_exec.py
src/lfx/src/lfx/graph/graph/: base.py  utils.py
src/lfx/src/lfx/graph/vertex/: base.py
src/lfx/src/lfx/tests/unit/components/: test_codex_exec_component.py
(+18 files in other folders)
