[project]
name = "lfx-paddleocr"
version = "0.1.0"
description = "OCR Paddle component using PaddleOCR + PP-DocLayoutV3 for document OCR and Markdown export."
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = { text = "MIT" }
authors = [
    { name = "Langflow", email = "contact@langflow.org" },
]
keywords = ["langflow", "lfx", "extension", "bundle", "paddleocr", "ocr", "document"]

dependencies = [
    "lfx>=1.10.0.dev0,<2.0.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
local = [
    "paddleocr>=2.8.0",
    "paddlepaddle>=3.0.0",
    "transformers>=4.40.0",
    "safetensors>=0.4.0",
    "torch>=2.0.0",
]
all = [
    "lfx-paddleocr[local]",
]

[project.urls]
Homepage = "https://github.com/langflow-ai/langflow"
Documentation = "https://docs.langflow.org/bundles-paddleocr"
Repository = "https://github.com/langflow-ai/langflow"

[project.entry-points."langflow.extensions"]
lfx-paddleocr = "lfx_paddleocr"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lfx_paddleocr"]
include = ["src/lfx_paddleocr/extension.json", "src/lfx_paddleocr/components/**/*.py"]

[tool.hatch.build.targets.sdist]
include = [
    "src/lfx_paddleocr",
    "extension.json",
    "README.md",
    "pyproject.toml",
]
